<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="begin_date_label">Begin Date:</string>
    <string name="sort_order_label">Sort Order:</string>
    <string name="news_desk_label">News Desk:</string>
    <string name="arts">Arts</string>
    <string name="sports">Sports</string>
    <string name="fashion_and_style"><![CDATA[Fashion & Style]]></string>
    <string name="search_settings">Search Settings</string>
    <string name="filter_search_fragment_title">Filter Articles</string>
    <string name="internet_unavailable_message">Internet is not available.</string>
    <string name="query_error_message">Search Query invalid.</string>
    <string name="share">Share</string>
</resources>
